modification for the mailer devise and error messages

--- a/public/500.html
+++ b/public/500.html
@@ -58,9 +58,11 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <div>
-      <h1>We're sorry, but something went wrong.</h1>
+      <h1>Tu t'es trompé petit malin</h1>
+      <p>Retourne a la page d'accueill </p>
+
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>Petit coquin va !</p>
   </div>
 </body>
 </html>
