--- a/public/404.html
+++ b/public/404.html
@@ -59,7 +59,8 @@
   <div class="dialog">
     <div>
       <h1>Tu t'es trompé petit malin</h1>
-      <p>Retourne donc sur ta page adresse</p>
+      <p>Retourne a la page d'accueill </p>
+
     </div>
     <p>Petit coquin va !</p>
   </div>
